Fixing an issue on safari on desktop where the lists were being cut in half, showing part of the text in one column and part in another.

--- a/css/marketing.css
+++ b/css/marketing.css
@@ -297,6 +297,12 @@ td:after {
     column-width: 200px;
 }
 
+.column-list li {
+-webkit-column-break-inside: avoid;
+          page-break-inside: avoid;
+               break-inside: avoid;
+}
+
    /*
     *  * -- DESKTOP (AND UP) MEDIA QUERIES --
     *   * On desktops and other large devices, we want to over-ride some
